--- a/src/desktop/src/ui/views/settings/account/addresses.scss
+++ b/src/desktop/src/ui/views/settings/account/addresses.scss
@@ -4,6 +4,12 @@
     margin: 0px;
     padding: 0;
 
+    > div {
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column-reverse;
+    }
+
     p {
         font-family: 'SourceCodePro';
         font-size: 12px;
