#508 Increasing margin of inner div to be able to show all characters when user wants to check the beginning of the seed being typed

--- a/src/desktop/src/ui/components/input/input.scss
+++ b/src/desktop/src/ui/components/input/input.scss
@@ -233,6 +233,7 @@
     &.seed {
         fieldset .editable {
             padding: 0 32px 0 21px;
+            margin-left: 20px;
         }
     }
 
