Initial testing coverage

--- a/src/desktop/src/ui/components/progress.scss
+++ b/src/desktop/src/ui/components/progress.scss
@@ -13,7 +13,7 @@
         height: 14px;
         border: 2px solid var(--primary);
         border-radius: 8px;
-        > div {
+        .bar {
             display: block;
             height: 100%;
             background: var(--primary);
