--- a/src/desktop/src/ui/global/seedExport.scss
+++ b/src/desktop/src/ui/global/seedExport.scss
@@ -12,12 +12,13 @@
         }
     }
     section {
-        padding-top: 220px;
+        padding-top: 275px;
         position: relative;
         height: 540px;
-
-        p {
-            margin: 20px;
-        }
+    }
+    .fieldSection {
+        position: relative;
+        height: 540px;
+        padding-top: 250px;
     }
 }
