- Add Desktop Lottie component - Switch Onboarding animations to Lottie

--- a/src/desktop/src/ui/views/onboarding/index.scss
+++ b/src/desktop/src/ui/views/onboarding/index.scss
@@ -79,12 +79,12 @@ $footer: 70px;
     footer {
         > div {
             bottom: -$footer;
-            transition: bottom 0.6s cubic-bezier(0.4, 0.0, 1, 1);
+            transition: bottom 0.6s cubic-bezier(0.4, 0, 1, 1);
         }
         &.choiceDefault > div:nth-child(1),
         &.choiceLedger > div:nth-child(2) {
             bottom: 0px;
-            transition: bottom 0.6s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition: bottom 0.6s cubic-bezier(0, 0, 0.2, 1);
             z-index: 2;
         }
     }
@@ -420,47 +420,9 @@ $footer: 70px;
 }
 
 .done {
-    position: relative;
-
-    h1,
-    p {
-        position: relative;
-        z-index: 2;
-    }
     p {
         margin: 40px auto;
-        max-width: 320px;
-        line-height: 24px;
-    }
-    svg {
-        position: absolute;
-        width: 320px;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0.06;
-        path {
-            fill: var(--body);
-        }
-        g,
-        > path {
-            animation: fly 6s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
-        }
-        :global {
-            #baloon-mask {
-                fill: var(--body-bg);
-                opacity: 1;
-            }
-            #baloon-1 {
-                transform: translate(0, 40%);
-            }
-            #baloon-2 {
-                transform: translate(0, 30%);
-            }
-            #baloon-3 {
-                transform: translate(0, 60%);
-            }
-        }
+        max-width: 480px;
     }
 }
 
@@ -496,89 +458,5 @@ $footer: 70px;
 }
 
 .usb {
-    svg {
-        path:nth-child(1),
-        path:nth-child(4),
-        path:nth-child(5),
-        path:nth-child(6),
-        path:nth-child(7),
-        path:nth-child(8) {
-            fill: var(--body);
-            transition: 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.475);
-            transition-delay: 0.5s;
-        }
-        path:nth-child(4),
-        path:nth-child(5) {
-            transform: translate(0, -4px);
-        }
-        path:nth-child(4),
-        path:nth-child(7) {
-            fill: transparent;
-            stroke: var(--body);
-            stroke-width: 1;
-        }
-        path:nth-child(8) {
-            transform-origin: 20px 15px;
-        }
-
-        path:nth-child(3),
-        circle {
-            fill: none;
-            stroke: var(--body);
-            stroke-width: 1.5;
-        }
-
-        circle {
-            opacity: 0;
-            transition: 0.3s linear;
-        }
-
-        path:nth-child(3) {
-            transform: translate(0, -0.5px);
-            stroke-dasharray: 8;
-            stroke-dashoffset: 8;
-            transition: 0.4s ease-out;
-        }
-    }
-    span {
-        display: block;
-    }
-
-    &.on {
-        svg {
-            path:nth-child(4),
-            path:nth-child(5) {
-                transform: translate(0, 0px);
-                fill: var(--body);
-            }
-            path:nth-child(6),
-            path:nth-child(7) {
-                transform: translate(0, -3px);
-                fill: var(--body);
-            }
-
-            path:nth-child(8) {
-                opacity: 0;
-                transition-delay: 0.4s;
-            }
-
-            circle {
-                opacity: 1;
-                transition-delay: 1s;
-            }
-            path:nth-child(3) {
-                stroke-dashoffset: 0;
-                transition-delay: 1s;
-            }
-            path:nth-child(4) {
-                transform: translate(0, 0px);
-            }
-            path:nth-child(5) {
-                transform: scale(1, 1);
-            }
-            path:nth-child(6) {
-                transform: translate(0, -3px);
-            }
-        }
-    }
+    margin-top: -50px;
 }
