--- a/src/desktop/src/ui/views/onboarding/index.scss
+++ b/src/desktop/src/ui/views/onboarding/index.scss
@@ -299,40 +299,9 @@ $footer: 70px;
         > div {
             display: block;
             position: relative;
-            margin: 28px auto;
-            width: 60px;
-            height: 60px;
-            padding: 18px;
-            &:before,
-            &:after {
-                content: '';
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: calc(100% + 12px);
-                height: calc(100% + 12px);
-                border: 1px solid var(--body-alt);
-                border-radius: 100%;
-                transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
-                z-index: 2;
-            }
-            &:after {
-                width: 100%;
-                height: 100%;
-                background: var(--body-bg);
-                border: none;
-                transition: all 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
-                z-index: 1;
-            }
-            span {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                margin: 1px 0 0 1px;
-                z-index: 3;
-            }
+            margin: 28px auto 16px;
+            width: 72px;
+            height: 72px;
         }
 
         &:hover {
