--- a/src/desktop/src/ui/views/onboarding/index.scss
+++ b/src/desktop/src/ui/views/onboarding/index.scss
@@ -79,12 +79,12 @@ $footer: 70px;
     footer {
         > div {
             bottom: -$footer;
-            transition: bottom 0.6s cubic-bezier(0.4, 0.0, 1, 1);
+            transition: bottom 0.6s cubic-bezier(0.4, 0, 1, 1);
         }
         &.choiceDefault > div:nth-child(1),
         &.choiceLedger > div:nth-child(2) {
             bottom: 0px;
-            transition: bottom 0.6s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition: bottom 0.6s cubic-bezier(0, 0, 0.2, 1);
             z-index: 2;
         }
     }
@@ -97,6 +97,18 @@ $footer: 70px;
         p {
             display: none;
         }
+    }
+
+    pre {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 18px;
+        background: var(--box-bg);
+        padding: 20px 10px 20px 20px;
+        max-width: 560px;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        user-select: text;
     }
 }
 
