Catch preload script errors and show to the user

--- a/src/desktop/src/ui/views/onboarding/index.scss
+++ b/src/desktop/src/ui/views/onboarding/index.scss
@@ -109,6 +109,14 @@ $footer: 70px;
         white-space: pre-wrap;
         word-wrap: break-word;
         user-select: text;
+        max-height: 560px;
+        overflow-y: scroll;
+
+        span {
+            display: block;
+            margin-bottom: 20px;
+            user-select: text;
+        }
     }
 }
 
