--- a/src/desktop/src/ui/components/toggle.scss
+++ b/src/desktop/src/ui/components/toggle.scss
@@ -2,6 +2,9 @@
     &.inline {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        line-height: 14px;
+        margin: 32px 0;
         cursor: pointer;
 
         > div {
