--- a/src/desktop/src/ui/views/settings/index.scss
+++ b/src/desktop/src/ui/views/settings/index.scss
@@ -300,6 +300,10 @@
     padding: 0 20px;
     text-align: left;
 
+    form > fieldset > div{
+        max-width: none;
+    }
+
     ul {
         height: 400px;
         position: relative;
