- Update animation file names - Remove modal fade out

--- a/src/desktop/src/ui/components/modal/modal.scss
+++ b/src/desktop/src/ui/components/modal/modal.scss
@@ -143,6 +143,7 @@ $footer: 70px;
 .hidden {
     pointer-events: none;
     opacity: 0;
+    transition: none;
 
     .wrapper {
         transform: scale(0.95);
